# Learning-Computer-Graphics

./: README.md
bouncing_and_colliding_ellipses/: CMakeLists.txt  README.md  body_params.txt  ellipse_params.txt
bouncing_and_colliding_ellipses/include/global/: Context.h
bouncing_and_colliding_ellipses/include/shader/: shader.h
bouncing_and_colliding_ellipses/include/shape/: Circle.h  CubicCurve.h  CustomObject.h  Ellipse.h  Ellipses.h  Faces.h  LineSegment.h  Shape.h
bouncing_and_colliding_ellipses/src/: main.cpp
bouncing_and_colliding_ellipses/src/shape/: Circle.cpp  CustomObject.cpp  Ellipse.cpp  Ellipses.cpp  Faces.cpp
bouncing_and_colliding_ellipses/src/utils/: CollisionDetection.cpp  EllipseDynamics.cpp
catmull-rom/: CMakeLists.txt  README.md  points.txt
catmull-rom/include/global/: Context.h
catmull-rom/include/shader/: shader.h  tess_shader.h
catmull-rom/include/shape/: BCurve.h  CCurve.h  Shape.h
catmull-rom/src/: main.cpp
catmull-rom/src/global/: Context.cpp
catmull-rom/src/shader/: bezier_curve.frag  bezier_curve.vert  cr_tess_eval.tese  tess_control.tesc  tess_evaluation.tese  vert.glsl
catmull-rom/src/shape/: BCurve.cpp  CCurve.cpp
city-modeling/: CMakeLists.txt  README.md
city-modeling/include/shader/: Camera.h  Shader.h
city-modeling/include/shape/: Cube.h  Dodecahedron.h  Icosahedron.h  Octahedron.h  Shape.h  ShapeGroup.h  Tetrahedron.h
city-modeling/src/: main.cpp
city-modeling/src/shader/: circle.tese  conetop.tese  cylinder.tese  eval  f.frag  f.tesc  f.tese  f.vert  flat.frag.glsl  norm.gs  normal.frag.glsl  p2.eval  p2.phong.frag.glsl  p2.phong.vert.glsl  p2.tesc  phong.frag.glsl  phong.vert.glsl  q.frag  q.tesc  q.tese  q.vert  rect.tese  sphere.tese  supere.tese  tcs  torus.tese  vert
line_curve_drawing/: CMakeLists.txt  README.md  curveparams.txt
line_curve_drawing/include/global/: Context.h
line_curve_drawing/include/shape/: Circle.h  CubicCurve.h  Ellipse.h  LineSegment.h  Shape.h
line_curve_drawing/src/: main.cpp
line_curve_drawing/src/global/: Context.cpp
line_curve_drawing/src/shader/: frag.glsl  vert.glsl
line_curve_drawing/src/shape/: CubicCurve.cpp  Ellipse.cpp  LineSegment.cpp  Shape.cpp
